# redirt

./: Cargo.toml  README.md
src/: diff.rs  fsutil.rs  main.rs  reporting.rs  stack.rs  walk.rs
src/commands/: compare.rs  copy.rs  list.rs  mod.rs
src/fsutils/: mod.rs  unix.rs  windows.rs
src/walk/: fswalk.rs  mod.rs  options.rs
