[package]
name = "rdt"
version = "0.1.0"
edition = "2021"
description = "Recursive Directory Tool"
authors = ["Michael Ekstrand <md@ekstrandom.net>"]

[dependencies]
# basic reporting support
log = "^0.4"
stderrlog = "^0.5.4"
thiserror = "^1.0"
friendly = "^0.1"

# interface
anyhow = "1"
indicatif = "0.17"
enum_dispatch = "0.3"
clap = { version = "4.0", features = ["derive"] }
