[package]
name = "redirt"
version = "0.3.0"
edition = "2024"
license = "MIT"
description = "Recursive Directory Tool"
repository = "https://github.com/mdekstrand/redirt"
authors = ["Michael Ekstrand <md@ekstrandom.net>"]

[dependencies]
# basic reporting support
log = "^0.4"
stderrlog = "^0.6"
thiserror = "^2.0"
friendly = "^0.2"

# interface
anyhow = "1"
# indicatif = "0.17"
enum_dispatch = "0.3"
clap = { version = "4.0", features = ["derive"] }
anstream = "^0.6"
anstyle = "^1.0"

# fs utilities
ignore = "^0.4"

[target.'cfg(windows)'.dependencies]
winapi = "^0.3.9"
